fix(component): fix alignments

--- a/src/components/Stepper/Stepper.css
+++ b/src/components/Stepper/Stepper.css
@@ -8,8 +8,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    /* padding: 0 20px 0 20px; */
+    max-width: 100%;
+    padding: 0 20px 0 20px;
 }
 
 .stepperCircle {
@@ -70,6 +70,8 @@
 
 .divmargin {
     flex: 1;
+    height: 5px;
+    background-color: black;
 }
 
 .inactive {
